# Dericko681_fibbot

./: .env  Cargo.toml  Dockerfile  README.md  action.yml  new  note.txt
.github/workflows/: main.yml
src/: extract.rs  fibonacci.rs  get_pr.rs  main.rs  post_comment.rs
