[package]
name = "fibbot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
regex = "1.11.1"
dotenv = "0.15"
mockito = "0.31"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
octocrab = "0.43.0"